--- a/centerline_sf_final.ipynb
+++ b/centerline_sf_final.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "ed2386e3",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "07a8fc24-57b2-4c92-85ad-6afa0b26b6a1",
    "metadata": {},
    "outputs": [],
@@ -79,14 +79,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "b99c62c2",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3ef2ad56ae6440d08c71c96c6870ec56",
+       "model_id": "311a1102c61d4c939345f73e052e5836",
        "version_major": 2,
        "version_minor": 0
       },
