--- a/example.ipynb
+++ b/example.ipynb
@@ -9,16 +9,13 @@
    "source": [
     "import ee\n",
     "import geemap\n",
-    "from classification import *\n",
-    "from get_files import *\n",
-    "from riverMask import *\n",
-    "from centerline_width import *\n",
+    "from geeCenterline import *\n",
     "ee.Initialize()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ec8d607d",
+   "id": "e7423677",
    "metadata": {},
    "source": [
     "# Centerline extraction of the Tallahatchie River\n",
@@ -27,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44b94197",
+   "id": "ee12e0f8",
    "metadata": {},
    "source": [
     "# Import images\n",
@@ -69,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f19c77a",
+   "id": "d2088587",
    "metadata": {},
    "source": [
     "# Obtain river mask from Landsat image\n",
@@ -81,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7670b05",
+   "id": "42e8c2df",
    "metadata": {},
    "source": [
     "## Classification\n",
@@ -103,7 +100,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c192b08",
+   "id": "f2ac9f50",
    "metadata": {},
    "source": [
     "## River mask\n",
@@ -132,7 +129,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89acecde",
+   "id": "15221598",
    "metadata": {},
    "source": [
     "# Obtain river mask from the PlanetScope image\n",
@@ -142,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "6fc33bf8",
+   "id": "e43a84f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "981e2b79",
+   "id": "dbf4b1a7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fee875b2",
+   "id": "e8d28c17",
    "metadata": {},
    "source": [
     "# Centerline extraction"
@@ -178,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d6df055",
+   "id": "e3ed7051",
    "metadata": {},
    "source": [
     "## Medial Axis Transfrom (MAT)\n",
@@ -190,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "92dba453",
+   "id": "ca4218dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +197,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e324874a",
+   "id": "983ac566",
    "metadata": {},
    "source": [
     "## Remove noises caused by MAT and trim unwanted branches"
@@ -209,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "9f2e2764",
+   "id": "87bce27c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +217,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5877eced",
+   "id": "6981179b",
    "metadata": {},
    "source": [
     "# Out put\n",
@@ -230,7 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "a0edd0ee",
+   "id": "2fdb0352",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +246,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8cc05dd7",
+   "id": "f0cff389",
    "metadata": {},
    "source": [
     "# Visualize the image\n",
@@ -294,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "2c3327de",
+   "id": "8710472e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +309,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ff12d68af18741d8a8fc13e02050078f",
+       "model_id": "951b899b0e8843d1b7179095b54e90aa",
        "version_major": 2,
        "version_minor": 0
       },
