--- a/example.ipynb
+++ b/example.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7423677",
+   "id": "f01b5cdf",
    "metadata": {},
    "source": [
     "# Centerline extraction of the Tallahatchie River\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee12e0f8",
+   "id": "db7d24d7",
    "metadata": {},
    "source": [
     "# Import images\n",
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2088587",
+   "id": "2b3f9989",
    "metadata": {},
    "source": [
     "# Obtain river mask from Landsat image\n",
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42e8c2df",
+   "id": "f6c093d4",
    "metadata": {},
    "source": [
     "## Classification\n",
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2ac9f50",
+   "id": "d1021c04",
    "metadata": {},
    "source": [
     "## River mask\n",
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15221598",
+   "id": "27196c87",
    "metadata": {},
    "source": [
     "# Obtain river mask from the PlanetScope image\n",
@@ -139,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e43a84f8",
+   "id": "27640f83",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "dbf4b1a7",
+   "id": "fd160281",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8d28c17",
+   "id": "547a9a83",
    "metadata": {},
    "source": [
     "# Centerline extraction"
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3ed7051",
+   "id": "76e72b1a",
    "metadata": {},
    "source": [
     "## Medial Axis Transfrom (MAT)\n",
@@ -185,57 +185,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "ca4218dc",
+   "cell_type": "raw",
+   "id": "480f0593",
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "# calculate centerline, thre is the threshold to decide wether a value will be considered as centerline.\n",
-    "cl = CalculateCenterline1(riverPS2.unmask(), thre=0.9)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "983ac566",
-   "metadata": {},
-   "source": [
-    "## Remove noises caused by MAT and trim unwanted branches"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "87bce27c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# trim unwanted branches, the second input is the longest distance that a line will be considered as branches.\n",
-    "# The third input is the number of iteration to do the trimming algrithm.\n",
-    "trimed = trim_centerline(cl, 300, 5).selfMask()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6981179b",
-   "metadata": {},
-   "source": [
-    "# Out put\n",
-    "The result is going to be output as an asset in Google Earth Engine. This process may take a long time. Please check the process of the test at the Code Editor of Google Earthe Engine."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "2fdb0352",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# the location to output the centerline. PLEASE use our own space!\n",
-    "out_loc = 'users/luoyee1997/example/trimed'\n",
+    "out_loc = 'users/luoyee1997/example/river_mask'\n",
     "task = ee.batch.Export.image.toAsset(**{\n",
-    "    'image': trimed,\n",
-    "    'description': 'river_centerline',\n",
+    "    'image': riverPS2,\n",
+    "    'description': 'river_mask',\n",
     "    'assetId': out_loc,\n",
     "    'scale': 3,\n",
     "    'maxPixels': 6e8,\n",
@@ -245,8 +203,80 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "f69485f1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "riverMask = ee.Image('users/luoyee1997/example/river_mask').gt(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "4a7f36c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# calculate centerline, thre is the threshold to decide wether a value will be considered as centerline.\n",
+    "cl = CalculateCenterline(riverPS2.unmask(), thre=0.9)"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "f0cff389",
+   "id": "78e77f45",
+   "metadata": {},
+   "source": [
+    "## Remove noises caused by MAT and trim unwanted branches"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "c19d4c1b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# trim unwanted branches, the second input is the longest distance that a line will be considered as branches.\n",
+    "# The third input is the number of iteration to do the trimming algrithm.\n",
+    "trimed = noise_removal(cl, 100, 8)\n",
+    "trimed1 = CleanCenterline(trimed, 300, 3, iterate=3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0e26d5b3",
+   "metadata": {},
+   "source": [
+    "# Out put\n",
+    "The result is going to be output as an asset in Google Earth Engine. This process may take a long time. Please check the process of the test at the Code Editor of Google Earthe Engine."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "b6fc883e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# the location to output the centerline. PLEASE use our own space!\n",
+    "out_loc = 'users/luoyee1997/example/trimed2'\n",
+    "scl = trimed1.projection().nominalScale().getInfo()\n",
+    "task = ee.batch.Export.image.toAsset(**{\n",
+    "    'image': trimed1,\n",
+    "    'description': 'river_centerline_trimed',\n",
+    "    'assetId': out_loc,\n",
+    "    'scale': scl,\n",
+    "    'maxPixels': 6e8,\n",
+    "  'region': roi\n",
+    "})\n",
+    "task.start()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "26ef1b08",
    "metadata": {},
    "source": [
     "# Visualize the image\n",
@@ -255,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "id": "9e80719d",
    "metadata": {},
    "outputs": [],
@@ -273,43 +303,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "05d342b9",
    "metadata": {},
    "outputs": [],
    "source": [
     "# classified Landsat iamge\n",
-    "Map.addLayer(classLS, {'min':1, 'max':3, 'palette': ['#0080FF', 'red', 'green']}, 'classLS')\n",
+    "Map.addLayer(classLS, {'min':1, 'max':3, 'palette': ['#0080FF', 'red', 'green']}, 'classLS')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "1451ffc2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# the river mask obtained from Landsat\n",
-    "Map.addLayer(riverMask, {}, 'mask')\n",
+    "Map.addLayer(riverMask.selfMask(), {}, 'mask')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "f2dc50c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# classified PlanetScope image\n",
-    "Map.addLayer(classPS, {'min':1, 'max':3, 'palette': ['#0080FF', 'red', 'green']}, 'classPS')\n",
+    "Map.addLayer(classPS, {'min':1, 'max':3, 'palette': ['#0080FF', 'red', 'green']}, 'classPS')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "7ea540f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# river mask to compute the centerline.\n",
     "Map.addLayer(riverPS, {}, 'riverPS')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "8710472e",
+   "execution_count": 22,
+   "id": "af71c2f3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# upload the computed centerline and visualize it\n",
-    "trimed = ee.Image(out_loc)\n",
-    "Map.addLayer(trimed.selfMask(), {}, 'cl')"
+    "# visualize the computed centerlien\n",
+    "Map.addLayer(trimed, {'palette': 'white'}, 'cl')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "9979840e",
+   "execution_count": 26,
+   "id": "d6d2276a",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# upload the trimed centerline and visualize it\n",
+    "trimed = ee.Image(out_loc)\n",
+    "Map.addLayer(trimed, {'palette': 'coral'}, 'trimed')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "9979840e",
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "951b899b0e8843d1b7179095b54e90aa",
+       "model_id": "0f5169c5b9e0420187eed61465b733a6",
        "version_major": 2,
        "version_minor": 0
       },
