--- a/sandbar_ar.ipynb
+++ b/sandbar_ar.ipynb
@@ -39,7 +39,7 @@
     "img05 = ee.Image('LANDSAT/LT05/C02/T1_L2/LT05_023037_20051016').select(['SR_B3', 'SR_B2', 'SR_B1', 'SR_B4', 'SR_B5']).multiply(0.0000275).add(-0.2).rename(bandnames)\n",
     "img10 = ee.Image('LANDSAT/LT05/C02/T1_L2/LT05_023037_20101014').select(['SR_B3', 'SR_B2', 'SR_B1', 'SR_B4', 'SR_B5']).multiply(0.0000275).add(-0.2).rename(bandnames)\n",
     "img15 = ee.Image('LANDSAT/LC08/C02/T1_L2/LC08_023037_20151113').select(['SR_B4', 'SR_B3', 'SR_B2', 'SR_B5', 'SR_B6']).multiply(0.0000275).add(-0.2).rename(bandnames)\n",
-    "img20 = ee.Image('LANDSAT/LC08/C02/T1_L2/LC08_023037_20201126').select(['SR_B4', 'SR_B3', 'SR_B2', 'SR_B5', 'SR_B6']).multiply(0.0000275).add(-0.2).rename(bandnames)\n"
+    "img20 = ee.Image('LANDSAT/LC08/C02/T1_L2/LC08_023037_20201126').select(['SR_B4', 'SR_B3', 'SR_B2', 'SR_B5', 'SR_B6']).multiply(0.0000275).add(-0.2).rename(bandnames)"
    ]
   },
   {
