--- a/example.ipynb
+++ b/example.ipynb
@@ -9,6 +9,7 @@
    "source": [
     "import ee\n",
     "import geemap\n",
+    "from IPython.display import Markdown\n",
     "from geeCenterline import *\n",
     "ee.Initialize()"
    ]
@@ -33,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "id": "efffbb09",
    "metadata": {},
    "outputs": [],
@@ -46,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "id": "9b6092d3",
    "metadata": {},
    "outputs": [],
@@ -89,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "id": "8d4b7e84",
    "metadata": {},
    "outputs": [],
@@ -109,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "id": "b8c913e8",
    "metadata": {},
    "outputs": [],
@@ -138,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "id": "27640f83",
    "metadata": {},
    "outputs": [],
@@ -149,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "id": "fd160281",
    "metadata": {},
    "outputs": [],
@@ -204,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "id": "f69485f1",
    "metadata": {},
    "outputs": [],
@@ -214,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 32,
    "id": "4a7f36c6",
    "metadata": {},
    "outputs": [],
@@ -233,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 33,
    "id": "c19d4c1b",
    "metadata": {},
    "outputs": [],
@@ -255,13 +256,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 41,
+   "id": "ca4f78c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# the location to output the centerline. PLEASE use our own space!\n",
+    "out_loc = 'users/luoyee1997/example/trimed2'"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 23,
    "id": "b6fc883e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# the location to output the centerline. PLEASE use our own space!\n",
-    "out_loc = 'users/luoyee1997/example/trimed2'\n",
     "scl = trimed1.projection().nominalScale().getInfo()\n",
     "task = ee.batch.Export.image.toAsset(**{\n",
     "    'image': trimed1,\n",
@@ -285,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 34,
    "id": "9e80719d",
    "metadata": {},
    "outputs": [],
@@ -303,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 35,
    "id": "05d342b9",
    "metadata": {},
    "outputs": [],
@@ -314,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 36,
    "id": "1451ffc2",
    "metadata": {},
    "outputs": [],
@@ -325,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 37,
    "id": "f2dc50c1",
    "metadata": {},
    "outputs": [],
@@ -336,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 38,
    "id": "7ea540f6",
    "metadata": {},
    "outputs": [],
@@ -347,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 39,
    "id": "af71c2f3",
    "metadata": {},
    "outputs": [],
@@ -358,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 42,
    "id": "d6d2276a",
    "metadata": {},
    "outputs": [],
@@ -370,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 43,
    "id": "9979840e",
    "metadata": {
     "scrolled": false
@@ -379,7 +389,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0f5169c5b9e0420187eed61465b733a6",
+       "model_id": "15bb3cd2ff404ea89501c98cb34cd67d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -396,9 +406,168 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "75be65cc",
+   "metadata": {},
+   "source": [
+    "# Point bar imgration of the Arkansas River"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "3bb4e15e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ar_f = open('arkansas.txt').read().split()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "ad4be9c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "roi_id = \"users/luoyee1997/geeRiver/Arkansas/roi\"\n",
+    "roi = load_file(roi_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "9e69168e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# required names\n",
+    "bandnames_LS = ['Red', 'Green', 'Blue', 'NIR', 'SWIR1']\n",
+    "ar_cl = batch_load_LS(ar_f, bandnames_LS)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "c022d5e6",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "ar_cl = ar_cl.map(ref_cr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "88e212bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "classified = wrap_classification(ar_cl, thr2=0, thr3=0.2, thr4=0.3, thr5=0.6, numPts=100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "8f5b9c0f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Map = geemap.Map()\n",
+    "Map.addLayer(classified.first().clip(roi), {'min':1, 'max':3, 'palette': ['skyblue', 'sandybrown', 'green']}, 'classified')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "fec49ad1",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "[gif]https://earthengine.googleapis.com/v1alpha/projects/earthengine-legacy/videoThumbnails/f946380aa52149fc109c40bf3c3d3178-b5bac37fe7ba5caf23ec4574ba883d58:getPixels"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "video_args = {\n",
+    "    'region': roi,\n",
+    "    'framesPerSecond': 2,\n",
+    "    'min': 1,\n",
+    "    'max': 3,\n",
+    "    'palette': ['skyblue', 'sandybrown', 'green']\n",
+    "}\n",
+    "\n",
+    "# Get URL that will produce the animation when accessed.\n",
+    "gif_url1 = classified.getVideoThumbURL(video_args)\n",
+    "Markdown('[gif]'+gif_url1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "0a3f0c73",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "[gif]https://earthengine.googleapis.com/v1alpha/projects/earthengine-legacy/videoThumbnails/6331610e94e5fdb363a6ad77ab455000-8644c9195601c956ab6a09c0bcf75737:getPixels"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "video_args = {\n",
+    "  'region': roi,\n",
+    "  'framesPerSecond': 2,\n",
+    "  'max': 0.8,\n",
+    "  'min': 0,\n",
+    "  'gamma': [2, 2, 2.5]\n",
+    "}\n",
+    "\n",
+    "# Get URL that will produce the animation when accessed.\n",
+    "gif_url2 = ar_cl.select(['SWIR1', 'NIR', 'Green']).getVideoThumbURL(video_args)\n",
+    "Markdown('[gif]'+gif_url2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4a75e0bb",
+   "metadata": {},
+   "source": [
+    "<div style=\"display:flex\">\n",
+    "    <div style=\"flex:1;padding-right:10px;\">\n",
+    "        <img src=\"img/original.gif\" width=\"300\"/>\n",
+    "    </div>\n",
+    "    <div style=\"flex:1;padding-left:10px;\">\n",
+    "        <img src=\"img/classified.gif\" width=\"300\"/>\n",
+    "    </div>\n",
+    "</div>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8cf471a2",
+   "id": "0378ceaa",
    "metadata": {},
    "outputs": [],
    "source": []
