--- a/example.ipynb
+++ b/example.ipynb
@@ -551,15 +551,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a75e0bb",
+   "id": "ddb522f7",
    "metadata": {},
    "source": [
     "<div style=\"display:flex\">\n",
     "    <div style=\"flex:1;padding-right:10px;\">\n",
-    "        <img src=\"img/original.gif\" width=\"300\"/>\n",
+    "        <img src=\"https://github.com/yiLuo374/geeRiverCl/blob/main/img/original.gif\" width=\"300\"/>\n",
     "    </div>\n",
     "    <div style=\"flex:1;padding-left:10px;\">\n",
-    "        <img src=\"img/classified.gif\" width=\"300\"/>\n",
+    "        <img src=\"https://github.com/yiLuo374/geeRiverCl/blob/main/img/classified.gif\" width=\"300\"/>\n",
     "    </div>\n",
     "</div>"
    ]
@@ -567,7 +567,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0378ceaa",
+   "id": "a770a339",
    "metadata": {},
    "outputs": [],
    "source": []
